crates/fec-parser/tests/snapshots/itemizations__f56_1920821_v8_5.snap
---
source: crates/fec-parser/tests/itemizations.rs
expression: "itemizations(\"F56_1920821.fec\")"
snapshot_kind: text
---
[
  {
    "family": "F56",
    "form_type": "F56",
    "filer_committee_id": "C90023292",
    "transaction_id": "F56.4110",
    "contributor": {
      "entity_type": "IND",
      "organization_name": null,
      "name": {
        "first_name": "Phillip",
        "last_name": "Lawson",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "address": {
        "street_1": "755 Kenesaw Ave",
        "street_2": null,
        "city": "Knoxville",
        "state": "TN",
        "zip_code": "37919"
      }
    },
    "contributor_fec_id": null,
    "contribution_date": "2025-09-05",
    "contribution_amount": 100000.0,
    "contributor_employer": "LHP Capital",
    "contributor_occupation": "Chairman",
    "candidate": {
      "fec_id": null,
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "office": null,
      "state": null,
      "district": null
    },
    "conduit_name": null,
    "conduit_address": {
      "street_1": null,
      "street_2": null,
      "city": null,
      "state": null,
      "zip_code": null
    },
    "image_number": null
  }
]
