crates/fec-parser/tests/snapshots/itemizations__f65_1946674_v8_5.snap
---
source: crates/fec-parser/tests/itemizations.rs
expression: "itemizations(\"F65_1946674.fec\")"
snapshot_kind: text
---
[
  {
    "family": "F65",
    "form_type": "F65",
    "filer_committee_id": "C00929901",
    "transaction_id": "9524752",
    "contributor": {
      "entity_type": "ORG",
      "organization_name": "Emily's List",
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "address": {
        "street_1": "1800 M St NW",
        "street_2": "Ste 375N",
        "city": "Washington",
        "state": "DC",
        "zip_code": "200365862"
      }
    },
    "contributor_fec_id": null,
    "contribution_date": "2026-02-13",
    "contribution_amount": 5000.0,
    "contributor_employer": null,
    "contributor_occupation": null,
    "candidate": {
      "fec_id": null,
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "office": null,
      "state": null,
      "district": null
    },
    "conduit_name": null,
    "conduit_address": {
      "street_1": null,
      "street_2": null,
      "city": null,
      "state": null,
      "zip_code": null
    },
    "image_number": null
  }
]
