crates/fec-parser/tests/snapshots/itemizations__h1_181668_v5_2.snap
---
source: crates/fec-parser/tests/itemizations.rs
expression: "itemizations(\"H1_181668.fec\")"
snapshot_kind: text
---
[
  {
    "family": "H1",
    "form_type": "H1",
    "filer_committee_id": "C00401224",
    "transaction_id": "H1Jul05",
    "presidential_only_election_year": false,
    "presidential_senate_election_year": false,
    "senate_only_election_year": false,
    "non_presidential_non_senate_election_year": false,
    "federal_percent": null,
    "nonfederal_percent": null,
    "administrative_ratio_applies": true,
    "generic_voter_drive_ratio_applies": false,
    "public_communications_referencing_party_ratio_applies": false,
    "flat_minimum_federal_percentage": "X",
    "image_number": null
  }
]
