crates/fec-parser/tests/snapshots/itemizations__h1_1944956_v8_5.snap
---
source: crates/fec-parser/tests/itemizations.rs
expression: "itemizations(\"H1_1944956.fec\")"
snapshot_kind: text
---
[
  {
    "family": "H1",
    "form_type": "H1",
    "filer_committee_id": "C00459941",
    "transaction_id": "H1-908",
    "presidential_only_election_year": true,
    "presidential_senate_election_year": false,
    "senate_only_election_year": false,
    "non_presidential_non_senate_election_year": false,
    "federal_percent": null,
    "nonfederal_percent": null,
    "administrative_ratio_applies": false,
    "generic_voter_drive_ratio_applies": false,
    "public_communications_referencing_party_ratio_applies": false,
    "flat_minimum_federal_percentage": null,
    "image_number": null
  }
]
